# Sudo_finalproject

./: .gitignore  README.md  SETUP.md  _source_workspace.sh  realsense_fastsam_segment.py  setup.sh  source_ws.bash
arduino/hc_sr04_sensor/: hc_sr04_sensor.ino
docs/web-kiosk/: HANDOFF.md  plan.md
doosan-robot2/dsr_controller2/: CMakeLists.txt
doosan-robot2/dsr_controller2/config/: dsr_controller2_gz.yaml
doosan-robot2/dsr_controller2/include/dsr_controller2/: dsr_controller2.hpp
doosan-robot2/dsr_controller2/scripts/: gripper.py  gripper_control.py
doosan-robot2/dsr_controller2/src/: dsr_control_node2.cpp  dsr_controller2.cpp
doosan-robot2/dsr_hardware2/include/dsr_hardware2/: dsr_hw_interface2.h
doosan-robot2/dsr_hardware2/src/: dsr_hw_interface2.cpp
doosan-robot2/dsr_msgs2/: CMakeLists.txt
doosan-robot2/dsr_msgs2/srv/gripper/: FlangeSerialClose.srv  FlangeSerialOpen.srv  FlangeSerialRead.srv  FlangeSerialWrite.srv
dsr_gripper_tcp/: package.xml  setup.cfg  setup.py
dsr_gripper_tcp/dsr_gripper_tcp/: example_gripper_tcp.py  gripper_semantics.py  gripper_service_node.py  gripper_tcp_bridge.py  gripper_tcp_protocol.py  robot_utils.py  web_dashboard.py  web_dashboard_node.py
dsr_gripper_tcp/launch/: gripper_service_node.launch.py  web_dashboard_node.launch.py
dsr_gripper_tcp/test/: test_gripper_semantics.py  test_gripper_tcp_bridge.py
dsr_gripper_tcp_interfaces/: CMakeLists.txt  package.xml
dsr_gripper_tcp_interfaces/action/: SafeGrasp.action
dsr_gripper_tcp_interfaces/msg/: GripperState.msg
dsr_gripper_tcp_interfaces/srv/: GetMotionProfile.srv  GetPosition.srv  GetState.srv  SetMotionProfile.srv  SetPosition.srv  SetTorque.srv
e0509_gripper_description/: .gitignore  CMakeLists.txt  README.md  package.xml
e0509_gripper_description/config/: gz_controllers.yaml
e0509_gripper_description/config/curobo/: e0509_gripper.urdf  e0509_gripper.yml  e0509_spheres.yml
e0509_gripper_description/include/e0509_gripper_description/: modbus_rtu.hpp
e0509_gripper_description/launch/: bringup.launch.py  bringup_dsr.launch.py  bringup_gazebo.launch.py  bringup_real_gazebo.launch.py  curobo_vision.launch.py  display.launch.py  gazebo.launch.py  rviz_gazebo.launch.py
e0509_gripper_description/rviz/: display.rviz
e0509_gripper_description/scripts/: curobo_planner_node.py  digital_twin_bridge.py  gazebo_bridge.py  gripper.py  gripper_joint_publisher.py  gripper_service_node.py  marker_tracking_node.py  object_tracking_node.py  robot_slider_control.py
e0509_gripper_description/src/: gazebo_bridge.cpp  gripper_joint_publisher.cpp  gripper_service_node.cpp
e0509_gripper_description/urdf/: e0509_with_gripper.urdf.xacro
mini_project/: package.xml  requirements.txt  setup.cfg  setup.py
mini_project/config/: botsort_custom.yaml  pick_place_params.yaml
mini_project/dsr_realsense_pick_place/: gripper_node.py  gui_node.py  object_detector.py  pick_place_node.py  task_repository.py  ultrasonic_node.py
mini_project/launch/: pick_place.launch.py  web_kiosk.launch.py
mini_project/scripts/: diagnose_drcf.py  launch_cleanup.sh  restart_gripper_bridge.sh  run_pick_place_real.sh  shutdown_nodes.sh  start_clean.sh  teach_zone4_transit.py  wait_for_gripper_ready.py  wait_for_robot_ready.sh
mini_project/web_kiosk/backend/: main.py
mini_project/web_kiosk/frontend/: index.html  package-lock.json  vite.config.ts
mini_project/web_kiosk/frontend/src/: App.tsx  api.ts  index.css  products.ts
