<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_gripper_tcp</name>
  <version>0.1.0</version>
  <description>
    Doosan RH-P12-RN(A) gripper control package: DRL-side TCP server + Python
    bridge + CLI example + Flask/SocketIO web dashboard (with optional ROS2 node).
  </description>

  <maintainer email="dakae2002@naver.com">Dakae</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>dsr_msgs2</depend>
  <depend>dsr_gripper_tcp_interfaces</depend>

  <exec_depend>python3-flask</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
